fix layout issues of info on devhub dashboard (bug 699261)

--- a/media/css/impala/devhub-listing.less
+++ b/media/css/impala/devhub-listing.less
@@ -24,10 +24,17 @@
         margin-left: 2%;
         padding-left: 2%;
         width: 30%;
-        > .downloads,
-        > .users {
+        .downloads,
+        .users {
             color: @green;
-            margin-top: 0;
+        }
+        p {
+            font-size: 13px;
+            line-height: 15px;
+            margin: 0;
+            + p {
+                margin-top: 2px;
+            }
         }
     }
     .item-details {
